<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<include
		android:id="@+id/toolbar"
		layout="@layout/toolbar" />

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentTop="true"
		android:background="@color/white"
		android:contentDescription="@string/background"
		android:scaleType="fitXY" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/toolbar"
		android:orientation="vertical">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:layout_weight="1">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:contentDescription="@string/diary_logo"
				android:scaleType="centerInside"
				android:src="@drawable/logo" />
		</RelativeLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical"
			android:padding="10dp">

			<EditText
				android:id="@+id/activity_login_login_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:hint="@string/activity_login_edit_text_login"
				android:inputType="textEmailAddress"
				android:text="@string/test_login"
				android:textColor="@color/black"
				android:textColorHint="@color/light_grey" />

			<EditText
				android:id="@+id/activity_login_password_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:hint="@string/activity_login_password_edit_text"
				android:inputType="textPassword"
				android:text="@string/test_password"
				android:textColor="@color/black"
				android:textColorHint="#7e7e7e" />

			<Button
				android:id="@+id/activity_login_login_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="20dp"
				android:text="@string/activity_login_title" />
		</LinearLayout>
	</LinearLayout>

</RelativeLayout>